feat: add form fields to form

--- a/form.html
+++ b/form.html
@@ -1,134 +1,134 @@
 <!doctype html>
 
 <html>
-  <head>
-    <title>7vs7 Formulier</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+<head>
+  <title>7vs7 Formulier</title>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-  <body>
-    <header>
-      <div class="header-container">
-        <div class="menu-icon" onclick="toggleMenu()">
-          <div class="menu-line one"></div>
-          <div class="menu-line two"></div>
-          <div class="menu-line three"></div>
-        </div>
-        <div class="logo">
-          <a href="index.html">
-            <img alt="7vs7" src="7V7-logo.png">
-          </a>
-        </div>
-        <div class="nav-menu">
-          <a class="menu-item link" href="location.html">Locatie</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
-          <div class="menu-item dropdown-link">Informatie
-            <div class="dropdown-container">
-              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-              <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
-            </div>
-          </div>
-          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
-        </div>
-      </div>
-    </header>
-
-    <div class="page-wrapper">
-
-      <div class="banner banner-with-form">
-        <div class="banner-wrapper">
-          <div class="headings">
-            <div class="seven-wrapper">
-              <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
-            </div>
-            <h2>Het haarlemse voetbaltoernooi!</h2>
-          </div>
-          <div class="form-container">
-            <form class="submit-form">
-              <div class="form-input">
-                <div class="label">Voornaam (Verplicht)</div>
-                <input class="input first-name" placeholder="Voornaam">
-              </div>
-              <div class="form-input">
-                <div class="label">Achternaam (Verplicht)</div>
-                <input class="input last-name" placeholder="Achternaam">
-              </div>
-              <div class="form-input">
-                <div class="label">Telefoonnummer (Verplicht)</div>
-                <input class="input phone-number" placeholder="Telefoonnummer">
-              </div>
-              <div class="form-input">
-                <div class="label">Emailadres (Verplicht)</div>
-                <input class="input email-address" placeholder="Emailadres">
-              </div>
-              <div class="radio-label">
-                Wil je je inschrijven als team of als individu?
-              </div>
-              <div class="form-input">
-                <div class="radio-button">
-                  <input type="radio" id="team" name="team-or-individu" value="team" onchange="showTeam()">
-                  <label for="team">Vriendenteam</label>
-                </div>
-                <div class="radio-button">
-                  <input type="radio" id="individu" name="team-or-individu" value="individu" onchange="hideTeam()">
-                  <label for="individu">Individueel</label>
-                </div>
-                <div class="radio-button">
-                  <input type="radio" id="company" name="team-or-individu" value="individu" onchange="showTeam()">
-                  <label for="individu">Bedrijfsteam</label>
-                </div>
-              </div>
-              <div class="form-input team-name-input">
-                <div class="label">Teamnaam (Optioneel)</div>
-                <input class="input team-name" placeholder="Teamnaam">
-              </div>
-              <div class="form-input">
-                <div class="radio-button">
-                  <input type="radio" id="team" name="high-or-low" value="team">
-                  <label for="team">Hoge Klasse</label>
-                </div>
-                <div class="radio-button">
-                  <input type="radio" id="individu" name="high-or-low" value="individu">
-                  <label for="individu">Lage Klasse</label>
-                </div>
-              </div>
-              <div class="submit-button" onclick="displayForm()">
-                Meld je nu aan!
-              </div>
-            </form>
-          </div>
-          <div class="image">
-            <img alt="7vs7-banner" src="7vs7-banner.jpg">
-          </div>
-        </div>
-      </div>
-
-      <div class="spacer-sm"></div>
-
+<body>
+<header>
+  <div class="header-container">
+    <div class="menu-icon" onclick="toggleMenu()">
+      <div class="menu-line one"></div>
+      <div class="menu-line two"></div>
+      <div class="menu-line three"></div>
     </div>
-    <div class="spacer-sm"></div>
-    <footer>
-      <div class="footer-container">
+    <div class="logo">
+      <a href="index.html">
         <img alt="7vs7" src="7V7-logo.png">
-        <div class="footer-menu-items">
-          <a class="menu-item link" href="location.html">Locatie</a>
-          <a class="menu-item link" href="contact.html">Contact</a>
+      </a>
+    </div>
+    <div class="nav-menu">
+      <a class="menu-item link" href="location.html">Locatie</a>
+      <a class="menu-item link" href="contact.html">Contact</a>
+      <div class="menu-item dropdown-link">Informatie
+        <div class="dropdown-container">
           <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
           <a class="menu-item link" href="regels.html">Regels</a>
           <a class="menu-item link" href="kosten.html">Wat kost het?</a>
         </div>
       </div>
-    </footer>
-    <script src="form.js"></script>
-    <script src="menu.js"></script>
-  </body>
+      <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
+    </div>
+  </div>
+</header>
+
+<div class="page-wrapper">
+
+  <div class="banner banner-with-form">
+    <div class="banner-wrapper">
+      <div class="headings">
+        <div class="seven-wrapper">
+          <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
+        </div>
+        <h2>Het haarlemse voetbaltoernooi!</h2>
+      </div>
+      <div class="form-container">
+        <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form">
+          <div class="form-input">
+            <label for="voornaam" class="label">Voornaam (Verplicht)</label>
+            <input id="voornaam" name="voornaam" class="input first-name" placeholder="Voornaam">
+          </div>
+          <div class="form-input">
+            <label for="achternaam" class="label">Achternaam (Verplicht)</label>
+            <input id="achternaam" name="achternaam" class="input last-name" placeholder="Achternaam">
+          </div>
+          <div class="form-input">
+            <label for="telefoon" class="label">Telefoonnummer (Verplicht)</label>
+            <input id="telefoon" name="telefoon" class="input phone-number" placeholder="Telefoonnummer">
+          </div>
+          <div class="form-input">
+            <label for="email" class="label">Emailadres (Verplicht)</label>
+            <input id="email" name="email" class="input email-address" placeholder="Emailadres">
+          </div>
+          <div class="radio-label">
+            Wil je je inschrijven als team of als individu?
+          </div>
+          <div class="form-input">
+            <div class="radio-button">
+              <input type="radio" id="vriendenteam" name="team_type" value="vriendenteam" onchange="showTeam()">
+              <label for="vriendenteam">Vriendenteam</label>
+            </div>
+            <div class="radio-button">
+              <input type="radio" id="individueel" name="team_type" value="individueel" onchange="hideTeam()">
+              <label for="individueel">Individueel</label>
+            </div>
+            <div class="radio-button">
+              <input type="radio" id="bedrijfsteam" name="team_type" value="bedrijfsteam" onchange="showTeam()">
+              <label for="bedrijfsteam">Bedrijfsteam</label>
+            </div>
+          </div>
+          <div class="form-input team-name-input">
+            <label for="team_naam" class="label">Teamnaam (Optioneel)</label>
+            <input id="team_naam" name="team_naam" class="input team-name" placeholder="Teamnaam">
+          </div>
+          <div class="form-input">
+            <div class="radio-button">
+              <input type="radio" id="klasse_hoog" name="klasse" value="hoog">
+              <label for="klasse_hoog">Hoge Klasse</label>
+            </div>
+            <div class="radio-button">
+              <input type="radio" id="klasse_laag" name="klasse" value="laag">
+              <label for="klasse_laag">Lage Klasse</label>
+            </div>
+          </div>
+          <div class="submit-button" onclick="displayForm()">
+            Meld je nu aan!
+          </div>
+        </form>
+      </div>
+      <div class="image">
+        <img alt="7vs7-banner" src="7vs7-banner.jpg">
+      </div>
+    </div>
+  </div>
+
+  <div class="spacer-sm"></div>
+
+</div>
+<div class="spacer-sm"></div>
+<footer>
+  <div class="footer-container">
+    <img alt="7vs7" src="7V7-logo.png">
+    <div class="footer-menu-items">
+      <a class="menu-item link" href="location.html">Locatie</a>
+      <a class="menu-item link" href="contact.html">Contact</a>
+      <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
+      <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+      <a class="menu-item link" href="regels.html">Regels</a>
+      <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+    </div>
+  </div>
+</footer>
+<script src="form.js"></script>
+<script src="menu.js"></script>
+</body>
 </html>
