--- a/form.html
+++ b/form.html
@@ -55,7 +55,7 @@
                 <h2>Het haarlemse voetbaltoernooi!</h2>
             </div>
             <div class="form-container">
-                <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form">
+                <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form" id="versus-form">
                     <div class="form-input">
                         <label for="voornaam" class="label">Voornaam (Verplicht)</label>
                         <input id="voornaam" name="voornaam" class="input first-name" placeholder="Voornaam">
@@ -106,8 +106,13 @@
                             <label for="klasse_laag">Lage Klasse</label>
                         </div>
                     </div>
-                    <div class="submit-button" onclick="displayForm()">
-                        Meld je nu aan!
+                    <div class="buttons">
+                        <button class="submit-button" form="versus-form" type="submit">
+                            Verstuur aanmelding!
+                        </button>
+                        <div class="sub-button" onclick="displayForm()">
+                            Meld je nu aan!
+                        </div>
                     </div>
                 </form>
             </div>
