Add contact and images

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,12 @@
     </header>
 
     <div class="page-wrapper">
-
+      <div class="contact-person">
+        <img class="contact-person-image" src="cas-de-wit.jpeg">
+        <div class="contact-person-text">
+          Voor vragen stuur je mail naar <a class="mail-to" href="mailto:cazzdewit@7versus7.nl" target="_blank"> cazzdewit@7versus7.nl</a>
+      </div>
+      </div>
     </div>
     <div class="spacer-sm"></div>
     <footer>
