--- a/regels.html
+++ b/regels.html
@@ -46,7 +46,7 @@
     <div class="page-wrapper">
 
       <div class="banner">
-        <div class="banner-wrapper sm">
+        <div class="banner-wrapper player sm">
           <div class="headings">
             <h2>Regels voor</h2>
             <div class="seven-wrapper">
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="image">
-            <img alt="7vs7-banner" src="7vs7-rules.jpg">
+            <img alt="7vs7-banner" src="7v7-haarlem-player.png">
           </div>
         </div>
       </div>
