--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2>Het haarlemse voetbaltoernooi!</h2>
           </div>
           <div class="image">
-            <img alt="7vs7-banner" src="7vs7-banner.jpg">
+            <img alt="7vs7-banner" src="7v7-haarlem-team.png">
           </div>
         </div>
       </div>
