--- a/voor-wie.html
+++ b/voor-wie.html
@@ -45,7 +45,7 @@
     <div class="page-wrapper">
 
       <div class="banner">
-        <div class="banner-wrapper">
+        <div class="banner-wrapper page">
           <div class="headings">
             <h2>Voor wie is</h2>
             <div class="seven-wrapper">
