--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-      <div class="spacer-sm"></div>
+      <div class="spacer-sm desktop"></div>
 
       <div class="usps">
         <div class="usp">
@@ -75,7 +75,7 @@
         </div>
       </div>
 
-      <div class="spacer-sm"></div>
+      <div class="spacer-sm desktop"></div>
 
       <div class="cards-wrapper">
         <div class="cards-container">
