--- a/en/costs.html
+++ b/en/costs.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -22,7 +22,7 @@
         </div>
         <div class="logo">
           <a href="index.html">
-            <img alt="7vs7" src="7V7-logo.png">
+            <img alt="7vs7" src="../7V7-logo.png">
           </a>
         </div>
         <div class="nav-menu">
@@ -30,10 +30,10 @@
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-              <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
+              <a class="menu-item link" href="rules.html">Regels</a>
+              <a class="menu-item link" href="costs.html">Wat kost het?</a>
             </div>
           </div>
           <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
@@ -52,28 +52,26 @@
             </div>
           </div> -->
           <div class="image">
-            <img alt="7vs7-banner" src="7vs7-price.jpg">
+            <img alt="7vs7-banner" src="../7vs7-price.jpg">
           </div>
         </div>
       </div>
-
-      <div class="spacer-sm"></div>
-
     </div>
+      <div class="spacer-sm"></div>
 
     <footer>
       <div class="footer-container">
-        <img alt="7vs7" src="7V7-logo.png">
+        <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-          <a class="menu-item link" href="regels.html">Regels</a>
-          <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
+          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
+          <a class="menu-item link" href="rules.html">Regels</a>
+          <a class="menu-item link" href="costs.html">Wat kost het?</a>
         </div>
       </div>
     </footer>
-    <script src="menu.js"></script>
+    <script src="../menu.js"></script>
   </body>
 </html>
