--- a/en/location.html
+++ b/en/location.html
@@ -2,14 +2,15 @@
 
 <html>
   <head>
-    <title>Kosten</title>
+    <title>7vs7</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/23ac1fdc5c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -22,7 +23,7 @@
         </div>
         <div class="logo">
           <a href="index.html">
-            <img alt="7vs7" src="7V7-logo.png">
+            <img alt="7vs7" src="../7V7-logo.png">
           </a>
         </div>
         <div class="nav-menu">
@@ -30,10 +31,10 @@
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-              <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+              <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
+              <a class="menu-item link" href="rules.html">Regels</a>
+              <a class="menu-item link" href="costs.html">Wat kost het?</a>
             </div>
           </div>
           <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
@@ -43,37 +44,31 @@
 
     <div class="page-wrapper">
 
-      <div class="banner">
-        <div class="banner-wrapper">
-          <!-- <div class="headings">
-            <h2>Hoe werkt</h2>
-            <div class="seven-wrapper">
-              <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
-            </div>
-          </div> -->
-          <div class="image">
-            <img alt="7vs7-banner" src="7vs7-price.jpg">
-          </div>
+      <div class="spacer-sm"></div>
+
+      <div class="location-thb">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24175.09560401777!2d4.60825065838448!3d52.3730039604012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5ef305c3e0f63%3A0xb6f587a06e6e4083!2sTHB%20voetbal!5e0!3m2!1snl!2snl!4v1670762796857!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="location-info">
+          <h3>Adres</h3>
+          <p>Wagenweg 240B, 2012 NP Haarlem</p>
         </div>
       </div>
 
-      <div class="spacer-sm"></div>
-
     </div>
-
+    <div class="spacer-sm"></div>
     <footer>
       <div class="footer-container">
-        <img alt="7vs7" src="7V7-logo.png">
+        <img alt="7vs7" src="../7V7-logo.png">
         <div class="footer-menu-items">
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
-          <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
-          <a class="menu-item link" href="regels.html">Regels</a>
-          <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+          <a class="menu-item link" href="how-does-it-work.html">Hoe werkt het?</a>
+          <a class="menu-item link" href="for-who.html">Voor wie is het?</a>
+          <a class="menu-item link" href="rules.html">Regels</a>
+          <a class="menu-item link" href="costs.html">Wat kost het?</a>
         </div>
       </div>
     </footer>
-    <script src="menu.js"></script>
+    <script src="../menu.js"></script>
   </body>
 </html>
